# project_shopply

./: Dockerfile  Makefile  README.md  docker-compose.local-overrides.yml  docker-compose.yml  manage.py  pyproject.toml  start_app.sh
project_shopply/: asgi.py  settings.py  urls.py  wsgi.py
project_shopply/shopplyapp/: .env
shopplyapp/: apps.py  commands.py  exceptions.py  mixins.py  models.py  serializers.py  views.py
shopplyapp/adapters/into/web/: serializers.py  views.py
shopplyapp/application/commands/: commands.py
shopplyapp/application/helpers/: exceptions.py  mixins.py  permissions.py
shopplyapp/domain/: product_batch.py  stock.py
shopplyapp/migrations/: 0001_initial.py  0002_remove_order_product_remove_order_quantity_and_more.py  0003_remove_stock_id_alter_productbatch_order_and_more.py
